# SnakeS

./: .gitignore  CMakeLists.txt  ClientDockerfile  README.md  ServerDockerfile  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: test-client.yaml  test-docker-compose.yaml  test-server.yaml
Client/: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
Client/src/: Button.cpp  Button.hpp  Client.cpp  Constants.hpp  Core.cpp  Core.hpp  Enum.hpp  Game.cpp  Game.hpp  Graphics.cpp  Graphics.hpp  Lobby.cpp  Lobby.hpp  Tools.cpp  Tools.hpp  main.cpp
Server/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  justfile  main.cpp  server
Server/.cache/clangd/index/: BinaryPacket.cpp.6A99DE2CF14A79A9.idx  BinaryPacket.hpp.AB31DDCBBAD19010.idx  GameLogic.cpp.A385723470E95A08.idx  GameLogic.hh.F2328378D8746965.idx  Server.cpp.3550718467D0D363.idx  Server.hh.1FFF9A758D2EF559.idx  Snake.cpp.E9DB75C5C6A5E0AB.idx  Snake.hh.3A3764468904680F.idx  main.cpp.61414BA058B0D538.idx
Server/include/: BinaryPacket.hpp  GameLogic.hh  GameLogic.hpp  Server.hh  Server.hpp  Snake.hh  Snake.hpp
Server/src/: BinaryPacket.cpp  GameLogic.cpp  Server.cpp  Snake.cpp  main.cpp
libs/binary_protocol/: BinaryProtocol.cpp  BinaryProtocol.hpp  CMakeLists.txt  README.md  main.cpp
libs/binary_protocol/include/: BinaryPacket.hpp
libs/binary_protocol/src/: BinaryPacket.cpp
libs/client_communication/: CMakeLists.txt
libs/client_communication/include/: Communication.hpp
libs/client_communication/sample/: main.cpp
libs/client_communication/src/: Communication.cpp
libs/client_communication/test/: main.py
